# tripleo-operator-ansible

./: .ansible-lint  .gitignore  .gitreview  .pre-commit-config.yaml  .stestr.conf  .yamllint  README.md  ansible-requirements.txt  bindep.txt  galaxy.yml  molecule-requirements.txt  setup.cfg  test-requirements.txt  tox.ini
ci/playbooks/: publish_collection.yml
doc/: requirements.txt
doc/source/: bestpractices.rst  conf.py  contributing.rst  index.rst  installation.rst  roles.rst  usage.rst
playbooks/: README.md  container-build.yaml  container-prepare.yml  import-nodes.yml  overcloud-deploy.yml  overcloud-images.yml  overcloud-post-installation.yml  standalone.yml  undercloud.yml
plugins/action/: timestamp_file.py
plugins/filter/: shell_args.py
plugins/modules/: tripleo_shell_script.py
releasenotes/source/: conf.py  index.rst
roles/: README.md  tripleo-config-generate-ansible  tripleo-container-image-delete  tripleo-container-image-list  tripleo-container-image-prepare-default  tripleo-container-image-push  tripleo-container-image-show  tripleo-repos  tripleo-undercloud-backup  tripleo-undercloud-install  tripleo-undercloud-minion-install  tripleo-undercloud-minion-upgrade  tripleo-undercloud-upgrade
roles/test_molecule_prep/: README.md
roles/tripleo-config-generate-ansible/: README.md
roles/tripleo-container-image-delete/: README.md
roles/tripleo-container-image-list/: README.md
roles/tripleo-container-image-prepare-default/: README.md
roles/tripleo-container-image-push/: README.md
roles/tripleo-container-image-show/: README.md
roles/tripleo-repos/: README.md
roles/tripleo-undercloud-backup/: README.md
roles/tripleo-undercloud-install/: README.md
roles/tripleo-undercloud-minion-install/: README.md
roles/tripleo-undercloud-minion-upgrade/: README.md
roles/tripleo-undercloud-upgrade/: README.md
roles/tripleo_ceph_deploy/: README.md
roles/tripleo_ceph_spec/: README.md
roles/tripleo_ceph_user/: README.md
roles/tripleo_config_generate_ansible/: README.md
roles/tripleo_container_image_build/: README.md
roles/tripleo_container_image_delete/: README.md
roles/tripleo_container_image_list/: README.md
roles/tripleo_container_image_prepare/: README.md
roles/tripleo_container_image_prepare_default/: README.md
roles/tripleo_container_image_push/: README.md
roles/tripleo_container_image_show/: README.md
roles/tripleo_deploy/: README.md
roles/tripleo_overcloud_admin_authorize/: README.md
roles/tripleo_overcloud_backup/: README.md
roles/tripleo_overcloud_cell_export/: README.md
roles/tripleo_overcloud_config_download/: README.md
roles/tripleo_overcloud_container_image_build/: README.md
roles/tripleo_overcloud_container_image_prepare/: README.md
roles/tripleo_overcloud_container_image_tag_discover/: README.md
roles/tripleo_overcloud_container_image_upload/: README.md
roles/tripleo_overcloud_credentials/: README.md
roles/tripleo_overcloud_delete/: README.md
roles/tripleo_overcloud_deploy/: README.md
roles/tripleo_overcloud_export/: README.md
roles/tripleo_overcloud_external_update_run/: README.md
roles/tripleo_overcloud_external_upgrade_run/: README.md
roles/tripleo_overcloud_failures/: README.md
roles/tripleo_overcloud_ffwd_upgrade_converge/: README.md
roles/tripleo_overcloud_ffwd_upgrade_prepare/: README.md
roles/tripleo_overcloud_ffwd_upgrade_run/: README.md
roles/tripleo_overcloud_generate_fencing/: README.md
roles/tripleo_overcloud_image_build/: README.md
roles/tripleo_overcloud_image_upload/: README.md
roles/tripleo_overcloud_netenv_validate/: README.md
roles/tripleo_overcloud_network_provision/: README.md
roles/tripleo_overcloud_network_vip_provision/: README.md
roles/tripleo_overcloud_node_bios_configure/: README.md
roles/tripleo_overcloud_node_bios_reset/: README.md
roles/tripleo_overcloud_node_clean/: README.md
roles/tripleo_overcloud_node_configure/: README.md
roles/tripleo_overcloud_node_delete/: README.md
roles/tripleo_overcloud_node_discover/: README.md
roles/tripleo_overcloud_node_extract_provisioned/: README.md
roles/tripleo_overcloud_node_import/: README.md
roles/tripleo_overcloud_node_introspect/: README.md
roles/tripleo_overcloud_node_provide/: README.md
roles/tripleo_overcloud_node_provision/: README.md
roles/tripleo_overcloud_node_unprovision/: README.md
roles/tripleo_overcloud_profiles_list/: README.md
roles/tripleo_overcloud_profiles_match/: README.md
roles/tripleo_overcloud_raid_create/: README.md
roles/tripleo_overcloud_roles_generate/: README.md
roles/tripleo_overcloud_roles_list/: README.md
roles/tripleo_overcloud_roles_show/: README.md
roles/tripleo_overcloud_status/: README.md
roles/tripleo_overcloud_support_report_collect/: README.md
roles/tripleo_overcloud_update_converge/: README.md
roles/tripleo_overcloud_update_prepare/: README.md
zuul.d/: layout.yaml  molecule.yaml
(+480 files in other folders)
