[metadata]
name = tripleo-operator-ansible
summary = Operator ansible assets for the TripleO project.
description-file =
    README.md

author = OpenStack
author-email = openstack-discuss@lists.openstack.org
home-page = https://opendev.org/openstack/tripleo-ansible
classifier =
    License :: OSI Approved :: Apache Software License
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    Intended Audience :: Information Technology
    Topic :: Utilities

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
data_files =
    share/ansible/tripleo-operator-ansible/ = galaxy.yml
    share/ansible/tripleo-operator-ansible/ = README.md
    share/ansible/tripleo-operator-ansible/roles/ = roles/*
    share/ansible/tripleo-operator-ansible/plugins/ = plugins/*

[wheel]
universal = 1

[pbr]
skip_authors = True
skip_changelog = True
