[metadata]
name = tripleo-operator-ansible
summary = Operator ansible assets for the TripleO project.
description-file =
    README.md

author = OpenStack
author-email = openstack-discuss@lists.openstack.org
home-page = https://opendev.org/openstack/tripleo-ansible
classifier =
    License :: OSI Approved :: Apache Software License
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    Intended Audience :: Information Technology
    Topic :: Utilities

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
data_files =
    share/ansible/collections/ansible_collections/tripleo/operator/ = galaxy.yml
    share/ansible/collections/ansible_collections/tripleo/operator/ = README.md
    share/ansible/collections/ansible_collections/tripleo/operator/roles/ = roles/*
    share/ansible/collections/ansible_collections/tripleo/operator/plugins/ = plugins/*
    # TODO(mwhahaha): remove once rename is complete
    share/ansible/collections/ansible_collections/tripleo/operator/roles/tripleo-config-generate-ansible/ = roles/tripleo-config-generate-ansible/*
    share/ansible/collections/ansible_collections/tripleo/operator/roles/tripleo-container-image-delete/ = roles/tripleo-container-image-delete/*
    share/ansible/collections/ansible_collections/tripleo/operator/roles/tripleo-container-image-list/ = roles/tripleo-container-image-list/*
    share/ansible/collections/ansible_collections/tripleo/operator/roles/tripleo-container-image-prepare-default/ = roles/tripleo-container-image-prepare-default/*
    share/ansible/collections/ansible_collections/tripleo/operator/roles/tripleo-container-image-push/ = roles/tripleo-container-image-push/*
    share/ansible/collections/ansible_collections/tripleo/operator/roles/tripleo-container-image-show/ = roles/tripleo-container-image-show/*
    share/ansible/collections/ansible_collections/tripleo/operator/roles/tripleo-repos/ = roles/tripleo-repos/*
    share/ansible/collections/ansible_collections/tripleo/operator/roles/tripleo-undercloud-backup/ = roles/tripleo-undercloud-backup/*
    share/ansible/collections/ansible_collections/tripleo/operator/roles/tripleo-undercloud-install/ = roles/tripleo-undercloud-install/*
    share/ansible/collections/ansible_collections/tripleo/operator/roles/tripleo-undercloud-minion-install/ = roles/tripleo-undercloud-minion-install/*
    share/ansible/collections/ansible_collections/tripleo/operator/roles/tripleo-undercloud-minion-upgrade/ = roles/tripleo-undercloud-minion-upgrade/*
    share/ansible/collections/ansible_collections/tripleo/operator/roles/tripleo-undercloud-upgrade/ = roles/tripleo-undercloud-upgrade/*

[wheel]
universal = 1

[pbr]
skip_authors = True
skip_changelog = True

[flake8]
# based on https://github.com/psf/black
ignore = E203,E501,W503,W504,D
# "D" added because we do not use docstrings checks, yet
